@@ -1,4 +1,6 @@
 0.0.22:
+- Fixed an issue where running rewriting over leaf functions multiple times
+  could cause the red zone to be clobbered on 64-bit ELF
 
 0.0.21:
 - Added support for symbolic expressions in data.
